@@ -1,3 +1,8 @@
+2007-12-16  John Carr  <john.carr@unrouted.co.uk>
+
+	* jhbuild/modtypes/cmake.py:
+	add CMake support.  (closes: #503890)
+
 2007-12-16  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/commands/base.py, jhbuild/config.py, 
